<resources>
    <string name="app_name">Diariocal</string>
    <string name="nome">Name</string>
    <string name="limpar">Clean</string>
    <string name="quantidade">Number of calories (every 100 grams/ml)</string>
    <string name="erro_nome">" Name cannot be empty!"</string>
    <string name="erro_quantidade">" Quantity cannot be empty!"</string>
    <string name="campos_limpos">Clean fields</string>
    <string name="alimento_fresco">Fresh food</string>
    <string name="ml">ML</string>
    <string name="gramas">Grams</string>
    <string name="erro_categoria">" You must select a category"</string>
    <string name="salvar">Save</string>
    <string name="categoria">Category</string>
    <string name="frutas">Fruits</string>
    <string name="legumes">Vegetables</string>
    <string name="carnes">Meat</string>
    <string name="laticinios">Dairy</string>
    <string name="cadastrar_categoria_alimento">Register food category</string>
    <string name="cadastrar_alimento">Register food</string>
    <string name="cadastrar_refeicao">" Register meal"</string>
    <string name="cadastrar_diario">" Register diary"</string>
    <string name="banana">Banana</string>
    <string name="file_frango">Chicken Fillet</string>
    <string name="agua_gas">Sparkling water</string>
    <string name="fruta">Fruit</string>
    <string name="carne">Meat</string>
    <string name="bebida">Drink</string>
    <string name="cha">Tea</string>
    <string name="alimento_nome">Name food \"</string>
    <string name="foi_clicado">\" was clicked!</string>
    <string name="calorias">Calories</string>
    <string name="calorias_cada_100">calories per 100</string>
    <string name="alimento_processado">Processed food</string>
    <string name="arroz">Rice</string>
    <string name="feijao">Bean</string>
    <string name="batata_frita">" French fries"</string>
    <string name="laranja">Orange</string>
    <string name="pera">Pear</string>
    <string name="pao_forma">Loaf bread</string>
    <string name="cereal">Cereal</string>
    <string name="vegetal">Vegetable</string>
    <string name="massa">Pasta</string>
    <string name="novo">New</string>
    <string name="sobre">About</string>
    <string name="sobre_objetivo">Application to calculate daily calories</string>
    <string name="voltar">Back</string>
    <string name="cancelar">Cancel</string>
    <string name="email">Email: izabele.sanches@hotmail.com</string>
    <string name="nome_curso">" Course: Postgraduate in Java - UTFPR"</string>
    <string name="excluir">Delete</string>
    <string name="adicionar">Add</string>
    <string name="alterar">Alter</string>
    <string name="cadastro_alimento">Food registration</string>
    <string name="edicao_alimento">" Food edit"</string>
    <string name="erro_unidade_medida">" You must select a unit of measurement"</string>
    <string name="autor_aluna">" Student: Izabele Sanches de Medeiros"</string>
    <string name="claro">Light</string>
    <string name="escuro">Dark</string>
    <string name="configuracoes">Settings</string>
    <string name="deseja_realmente_apagar">Do you really want to delete the food?</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">yes</string>
    <string name="nao">no</string>

</resources>