<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/adicionar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/sobre"
        app:showAsAction="ifRoom" />
    <group
        android:id="@+id/groupTemas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuItemEscuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/escuro" />
        <item
            android:id="@+id/menuItemClaro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/claro" />
    </group>
</menu>